improve performance of some matrix operations, related fdo#83187

Change-Id: I0e6816a7f0d2dc051dff6a462724cb4a3c155289

fix error in last commit

Change-Id: Icafbe6e5daab64e7431d80c8956143341eb2ef0b

fix a few problems with my matrix commit

Change-Id: I6e3fdf4bd26c952a59ad130dc6e5c9d1f3ff5f07

coverity#1260446 Uninitialized scalar field

and

coverity#1260447 Uninitialized scalar field

Change-Id: I3aa5a1caf776fddc8b6029e96c24aa86b21de880

iterator::operator*() should return a reference

Change-Id: Id09f555c5ece9e5cb60a2ae7bc2456d4343744f5