sc/inc/scmatrix.hxx
@@ -385,6 +385,8 @@ public:
     void GetDoubleArray( std::vector<double>& rArray, bool bEmptyAsZero = true ) const;
     void MergeDoubleArray( std::vector<double>& rArray, Op eOp ) const;
 
+    void SubAddOp(bool bSub, double fVal, svl::SharedString aString, ScMatrix& rMat);
+
     ScMatrix& operator+= ( const ScMatrix& r );
 
 #if DEBUG_MATRIX
