sc/source/core/tool/interpr5.cxx
@@ -1188,6 +1188,11 @@ void ScInterpreter::ScAdd()
 {
     CalculateAddSub(false);
 }
+
+namespace {
+
+}
+
 void ScInterpreter::CalculateAddSub(bool _bSub)
 {
     ScMatrixRef pMat1 = NULL;
@@ -1275,29 +1280,24 @@ void ScInterpreter::CalculateAddSub(bool _bSub)
         }
         SCSIZE nC, nR;
         pMat->GetDimensions(nC, nR);
-        ScMatrixRef pResMat = GetNewMat(nC, nR);
+        ScMatrixRef pResMat = GetNewMat(nC, nR, true);
         if (pResMat)
         {
-            SCSIZE nCount = nC * nR;
+            svl::SharedString aString = mrStrPool.intern(ScGlobal::GetRscString(STR_NO_VALUE));
             if (bFlag || !_bSub )
             {
-                for ( SCSIZE i = 0; i < nCount; i++ )
+                if (_bSub)
                 {
-                    if (pMat->IsValue(i))
-                        pResMat->PutDouble( _bSub ? ::rtl::math::approxSub( fVal, pMat->GetDouble(i)) : ::rtl::math::approxAdd( pMat->GetDouble(i), fVal), i);
-                    else
-                        pResMat->PutString(mrStrPool.intern(ScGlobal::GetRscString(STR_NO_VALUE)), i);
+                    pMat->SubAddOp(true, fVal, aString, *pResMat);
+                }
+                else
+                {
+                    pMat->SubAddOp(false, fVal, aString, *pResMat);
                 }
             }
             else
             {
-                for ( SCSIZE i = 0; i < nCount; i++ )
-                {
-                    if (pMat->IsValue(i))
-                        pResMat->PutDouble( ::rtl::math::approxSub( pMat->GetDouble(i), fVal), i);
-                    else
-                        pResMat->PutString(mrStrPool.intern(ScGlobal::GetRscString(STR_NO_VALUE)), i);
-                }
+                pMat->SubAddOp(true, fVal, aString, *pResMat);
             }
             PushMatrix(pResMat);
         }
